[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/vent.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Vent.gd" type="Script" id=2]
[ext_resource path="res://Art/e button.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 33.5 )

[node name="Vent" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6, 13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="E" type="Sprite" parent="."]
position = Vector2( 0, -90 )
scale = Vector2( 0.305, 0.305 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Vent_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Vent_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
